--- a/tmm-test.css
+++ b/tmm-test.css
@@ -1,1 +1,34 @@
 /* CSS declarations go here */
+
+body {
+  margin: 0px;
+  padding: 20px;
+}
+
+.container {
+  width: 100%;
+  text-align: left;
+}
+
+.mainMenu {
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
+.mainMenu ul {
+  list-style-type:none;
+  margin:0;
+  padding:0;
+}
+
+.mainMenu ul li {
+  display: inline;
+  margin-right: 5px;
+  padding: 2px;
+  border: 1px solid black;
+  background: #EEE;
+}
+
+.footer {
+  position: absolute; left: 20px; bottom: 20px;
+}
