--- a/tmm-test.css
+++ b/tmm-test.css
@@ -33,6 +33,10 @@ body {
   background: #EEE;
 }
 
+.activeTab {
+  font-weight: bold;
+}
+
 .footer {
   position: absolute; left: 20px; bottom: 20px;
 }
